Fix text spacing in Facebook button for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -573,7 +573,7 @@ h6{
 input.fb-login-button{
   width: 16em;
   height: 3.5em;
-  padding: .5em .6em .5em .5em;
+  padding: .5em .6em .3em .5em;
   text-decoration: none;
   border: none;
   outline: none;
